fixed the issue i had with the tabs not showing up

--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,7 @@ header {
     text-align: center;
     border-radius: 24px;
     box-sizing: border-box;
-    border: 8px solid #B78A6A;
+    border: 8px solid #947057;
 }
 
 .reviews {
